--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "axios": "^0.21.1",
+    "email-validator": "^2.0.4",
     "i18n": "^0.13.2",
     "i18next": "^20.1.0",
     "i18next-browser-languagedetector": "^6.1.0",
